# orbit-visualizer

./: CLAUDE.md  CONTEXT.md  README.md  main.py  pyproject.toml  run.bat
.scratch/orbit-architecture-deepening/: PRD.md
.scratch/orbit-architecture-deepening/issues/: 01-shared-satellite-catalog.md  02-orbit-request-module.md  03-state-vector-orbitpoint-czml-path.md  04-server-session-seam.md  05-tle-orbit-seam.md  06-broadcast-precise-orbit-seams.md
.scratch/pyqt6-gui-launcher/: PRD.md
.scratch/pyqt6-gui-launcher/issues/: 01-backend-orbit-type-filter.md  02-gui-project-scaffold.md  03-process-manager.md  04-config-widgets.md  05-status-bar.md  06-main-window.md  07-e2e-tests.md
docs/: README.md  quick-start.md
docs/agents/: domain.md  triage-labels.md
docs/developer/: api-reference.md  architecture.md  development.md  frontend.md
docs/user/: gui-guide.md  orbit-types.md
gui/: __init__.py  __main__.py  help_dialog.py  main.py  main_window.py  orbit_config.py  process_manager.py  server_config.py  server_session.py  status_bar.py  tle_input.py
src/orbit/: __init__.py  adapters.py  constants.py  czml.py  models.py  request.py
src/satellites/: __init__.py  catalog.py  iss.py  tle_data.py
static/: index.html
tests/: conftest.py  test_config_aggregation.py  test_config_widgets.py  test_main_window.py  test_orbit_adapters.py  test_orbit_filter.py  test_orbit_points_czml.py  test_orbit_request.py  test_process_manager.py  test_satellite_catalog.py  test_server_session.py  test_status_bar.py
