[project]
name = "orbit-visualizer"
version = "0.1.0"
description = "Multi-source satellite orbit comprehensive visualization system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sgp4>=2.22",
    "numpy>=1.26.0",
    "PyQt6>=6.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
dev-dependencies = []
